# ros_xlnx_platformstats

./: README.md  package.xml  setup.cfg  setup.py
resource/: ros_xlnx_platformstats
ros_platformstats/: platformstats_publisher.py  platformstats_subscriber.py
ros_xlnx_platformstats/: xlnx_platformstats_publisher.py  xlnx_platformstats_subscriber.py
